Nuevo ejercicio: Funcion aproximar e.

--- a/Py_from0_to100.ipynb
+++ b/Py_from0_to100.ipynb
@@ -39,6 +39,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b021883",
+   "metadata": {},
+   "source": [
+    "## Implementá una función llamada aproximar_e(n) que reciba como parámetro un número entero n y devuelva una aproximación del número e (constante de Euler) calculando la suma de la serie:\n",
+    "\n",
+    "### 1- No podés usar la función math.factorial() (el objetivo es practicar bucles).\n",
+    "### 2- Debés implementar tu propio cálculo del factorial dentro de la función o en una función auxiliar.\n",
+    "### 3- Tu solución debe ser eficiente en memoria: evitá recalcular factoriales desde cero en cada iteración."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a537c2bb",
