Ejercicio aproximar resuelto

--- a/Py_from0_to100.ipynb
+++ b/Py_from0_to100.ipynb
@@ -52,8 +52,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a537c2bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.7166666666666663"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def arproximar_e(n: int) -> float:\n",
+    "    e = 0\n",
+    "    factorial = 1\n",
+    "    for k in range(n+1):\n",
+    "        e = e + 1/factorial\n",
+    "        factorial = factorial * (k + 1)\n",
+    "    return e\n",
+    "arproximar_e(5) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7657ab06",
    "metadata": {},
    "outputs": [],
    "source": []
