Nuevo ejercicio for y cambios en archivo readme

--- a/Py_from0_to100.ipynb
+++ b/Py_from0_to100.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ee4e462c",
+   "metadata": {},
+   "source": [
+    "##  `03_bucles` | Estructuras repetitivas: `for` y `while`. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78bb2c41",
    "metadata": {},
    "source": [
-    "## Implementá una función llamada evaluar_polinomio(coeficientes, x) que reciba:\n",
-    "### 1- Una lista de números coeficientes, donde cada elemento representa el coeficiente de un polinomio, empezando desde el término independiente.\n",
-    "### 2- Un número x, que es el valor en el cual se desea evaluar el polinomio."
+    "### Implementá una función llamada evaluar_polinomio(coeficientes, x) que reciba:\n",
+    "#### 1- Una lista de números coeficientes, donde cada elemento representa el coeficiente de un polinomio, empezando desde el término independiente.\n",
+    "#### 2- Un número x, que es el valor en el cual se desea evaluar el polinomio."
    ]
   },
   {
@@ -43,11 +51,11 @@
    "id": "7b021883",
    "metadata": {},
    "source": [
-    "## Implementá una función llamada aproximar_e(n) que reciba como parámetro un número entero n y devuelva una aproximación del número e (constante de Euler) calculando la suma de la serie:\n",
+    "### Implementá una función llamada aproximar_e(n) que reciba como parámetro un número entero n y devuelva una aproximación del número e (constante de Euler) calculando la suma de la serie:\n",
     "\n",
-    "### 1- No podés usar la función math.factorial() (el objetivo es practicar bucles).\n",
-    "### 2- Debés implementar tu propio cálculo del factorial dentro de la función o en una función auxiliar.\n",
-    "### 3- Tu solución debe ser eficiente en memoria: evitá recalcular factoriales desde cero en cada iteración."
+    "#### 1- No podés usar la función math.factorial() (el objetivo es practicar bucles).\n",
+    "#### 2- Debés implementar tu propio cálculo del factorial dentro de la función o en una función auxiliar.\n",
+    "#### 3- Tu solución debe ser eficiente en memoria: evitá recalcular factoriales desde cero en cada iteración."
    ]
   },
   {
@@ -79,12 +87,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "00ad22a6",
+   "metadata": {},
+   "source": [
+    "### Escribí una función llamada analizar_calificaciones que reciba una lista de números (las calificaciones de un grupo de estudiantes, entre 0 y 10) y devuelva un diccionario con la siguiente información:\n",
+    "\n",
+    "- El promedio de las calificaciones.\n",
+    "- La nota más alta.\n",
+    "- La nota más baja.\n",
+    "- La cantidad de aprobados (nota mayor o igual a 6).\n",
+    "- La cantidad de desaprobados (nota menor que 6).\n",
+    "\n",
+    "#### Restricciones y condiciones\n",
+    "\n",
+    "- No podés usar funciones predefinidas como sum(), max() o min().\n",
+    "- Tenés que calcular todo usando un bucle for.\n",
+    "- La función debe ser general, es decir, debe funcionar con cualquier lista numérica.\n",
+    "- Los cálculos deben ser eficientes: hacé todo en un solo bucle, sin recorrer la lista más de una vez."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "7657ab06",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 54.29999999999999, 5.429999999999999, 9.7, 1.5)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def analizar_calificaciones(calificaiones: list[float]) -> float:\n",
+    "    contar = 0\n",
+    "    sumar = 0\n",
+    "    maximo = calificaiones[0]\n",
+    "    minimo = calificaiones[0]\n",
+    "    for i in calificaiones:\n",
+    "        contar = contar + 1\n",
+    "        sumar = sumar + i \n",
+    "        prom = sumar / contar\n",
+    "        if i > maximo:\n",
+    "            maximo = i\n",
+    "        if i < minimo:\n",
+    "            minimo = i\n",
+    "    return contar, sumar, prom, maximo, minimo\n",
+    "analizar_calificaciones([2.5,5,8,8.9,5,9.7,3,7.4,1.5,3.3])"
+   ]
   }
  ],
  "metadata": {
