Termino seccion de bucles "for", sumo docstring, y doy paso a "while"

--- a/Py_from0_to100.ipynb
+++ b/Py_from0_to100.ipynb
@@ -109,17 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "7657ab06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10, 54.29999999999999, 5.429999999999999, 9.7, 1.5)"
+       "{'Cantidad': 10,\n",
+       " 'Suma': 54.29999999999999,\n",
+       " 'Promedio': 5.429999999999999,\n",
+       " 'Max': 9.7,\n",
+       " 'Min': 1.5}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,13 +137,142 @@
     "    for i in calificaiones:\n",
     "        contar = contar + 1\n",
     "        sumar = sumar + i \n",
-    "        prom = sumar / contar\n",
     "        if i > maximo:\n",
     "            maximo = i\n",
     "        if i < minimo:\n",
     "            minimo = i\n",
-    "    return contar, sumar, prom, maximo, minimo\n",
+    "    prom = sumar / contar\n",
+    "    return {\"Cantidad\": contar, \"Suma\": sumar, \"Promedio\": prom, \"Max\": maximo, \"Min\": minimo}\n",
     "analizar_calificaciones([2.5,5,8,8.9,5,9.7,3,7.4,1.5,3.3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f72da43",
+   "metadata": {},
+   "source": [
+    "### Escribí una función llamada procesar_numeros que reciba una lista de números enteros y devuelva un diccionario con la siguiente información:\n",
+    "- Una lista llamada \"pares\" con todos los números pares de la lista original.\n",
+    "- Una lista llamada \"impares\" con todos los números impares.\n",
+    "- Una lista llamada \"cuadrados\" con el cuadrado de cada número positivo.\n",
+    "- El promedio de todos los números negativos (si los hay).\n",
+    "\n",
+    "#### Restricciones:\n",
+    "- Usá solo un bucle for.\n",
+    "- No podés usar funciones predefinidas como sum() ni filter().\n",
+    "- Inicializá todas las listas y contadores antes del bucle.\n",
+    "- Si no hay números negativos, el promedio debe ser 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "56df55a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pares': [4, -2],\n",
+       " 'impares': [7, -5, 9],\n",
+       " 'cuadrados': [16, 49, 81],\n",
+       " 'promedio_negativos': [-3.5]}"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "\n",
+    "def procesar_numeros(lista_original: list[int]) -> list[list[float]]:\n",
+    "    \"\"\"\n",
+    "    Procesa una lista de números enteros y devuelve un diccionario con los\n",
+    "    resultados clasificados según distintas condiciones numéricas.\n",
+    "\n",
+    "    La función genera:\n",
+    "    - Una lista con los números pares.\n",
+    "    - Una lista con los números impares.\n",
+    "    - Una lista con los cuadrados de los números positivos.\n",
+    "    - El promedio de los números negativos (si no hay negativos, devuelve 0).\n",
+    "\n",
+    "    Parámetros\n",
+    "    ----------\n",
+    "    lista_original : list[int]\n",
+    "        Lista de números enteros a procesar.\n",
+    "\n",
+    "    Retorna\n",
+    "    -------\n",
+    "    dict[str, list[float]]\n",
+    "        Diccionario con las siguientes claves:\n",
+    "        {\n",
+    "            \"pares\": [lista_de_pares],\n",
+    "            \"impares\": [lista_de_impares],\n",
+    "            \"cuadrados\": [lista_de_cuadrados],\n",
+    "            \"promedio_negativos\": [promedio]\n",
+    "    }\n",
+    "\n",
+    "    Ejemplo\n",
+    "    -------\n",
+    "    >>> procesar_numeros([4, 7, -5, -2, 9])\n",
+    "    {'pares': [4, -2], 'impares': [7, -5, 9], 'cuadrados': [16, 49, 81], 'promedio_negativos': [-3.5]}\n",
+    "\n",
+    "    Notas\n",
+    "    -----\n",
+    "    - La función no modifica la lista original.\n",
+    "    - Los resultados se generan en una sola pasada de bucle, optimizando memoria.\n",
+    "    - Todas las listas devueltas son nuevas referencias (no alias de la original).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    pares = []\n",
+    "    impares = []\n",
+    "    cuadrados = []\n",
+    "    negativos = []\n",
+    "    promneg = []\n",
+    "    for numeros in lista_original:\n",
+    "        if numeros % 2 == 0:\n",
+    "            pares.append(numeros)\n",
+    "        else:\n",
+    "            impares.append(numeros) \n",
+    "        if numeros > 0:\n",
+    "            cuadrados.append(numeros **2)\n",
+    "        elif numeros < 0: \n",
+    "            negativos.append(numeros)  \n",
+    "    promedio_neg = sum(negativos)/len(negativos)\n",
+    "    promneg.append(promedio_neg)\n",
+    "\n",
+    "    lista_nueva = [pares,impares,cuadrados,promneg]\n",
+    "    return {\n",
+    "        \"pares\": pares,\n",
+    "        \"impares\": impares,\n",
+    "        \"cuadrados\": cuadrados,\n",
+    "        \"promedio_negativos\": promneg\n",
+    "    }\n",
+    "\n",
+    "procesar_numeros([4, 7, -5, -2, 9])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "57523062",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=1)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doctest.testmod()"
    ]
   }
  ],
