Nuevos ejercicios "while"

--- a/Py_from0_to100.ipynb
+++ b/Py_from0_to100.ipynb
@@ -5,7 +5,15 @@
    "id": "ee4e462c",
    "metadata": {},
    "source": [
-    "##  `03_bucles` | Estructuras repetitivas: `for` y `while`. |"
+    "#  `03_bucles` | Estructuras repetitivas: `for` y `while`. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa872542",
+   "metadata": {},
+   "source": [
+    "## Ejercicios prácticos #1 — Tus primeros bucle for"
    ]
   },
   {
@@ -274,6 +282,132 @@
    "source": [
     "doctest.testmod()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "895776a9",
+   "metadata": {},
+   "source": [
+    "## Ejercicios prácticos #2 — Tus primeros bucles while\n",
+    "\n",
+    "#### Escribí una función llamada contar_hasta(n: int) que reciba un número entero n y muestre por pantalla todos los números desde 1 hasta n, usando un bucle while.\n",
+    "\n",
+    "- No podés usar range() ni for.\n",
+    "- La variable de control debe inicializarse y actualizarse dentro del bucle.\n",
+    "- Cuando el contador supera n, el bucle debe detenerse."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "77aecc2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def contador_hasta(n: int) -> list[int]:\n",
+    "    i = 0\n",
+    "    numeros = []\n",
+    "    while i < n:\n",
+    "        numeros.append(i)\n",
+    "        i = i + 1\n",
+    "    return numeros\n",
+    "\n",
+    "contador_hasta(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fba26ec1",
+   "metadata": {},
+   "source": [
+    "#### Escribí una función llamada simular_pila() que: Cree una lista vacía llamada pila. Muestre un menú al usuario con las siguientes opciones:\n",
+    "\n",
+    "- 1  Agregar un elemento\n",
+    "- 2  Quitar un elemento\n",
+    "- 3  Mostrar pila actual\n",
+    "- 4  Salir\n",
+    "\n",
+    "Use un bucle while que se repita hasta que el usuario elija la opción 4.\n",
+    "Cuando el usuario:\n",
+    "- Elige 1, debe ingresar un valor que será agregado a la pila (usando .append()).\n",
+    "- Elige 2, debe quitar el último elemento agregado (usando .pop()), pero solo si la pila no está vacía.\n",
+    "- Elige 3, debe mostrar la pila actual.\n",
+    "- Elige 4, el programa debe terminar mostrando un mensaje de salida.\n",
+    "- Si el usuario ingresa una opción no válida, mostrar un mensaje de error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3a481ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simular_pila() -> list[str]:\n",
+    "    pila = []\n",
+    "    opcion = 0\n",
+    "\n",
+    "    while opcion != 4:\n",
+    "        print(\"\"\"\n",
+    "--- SIMULADOR DE PILA ---\n",
+    "1 - Agregar un elemento\n",
+    "2 - Quitar un elemento\n",
+    "3 - Mostrar pila actual\n",
+    "4 - Salir\n",
+    "\"\"\")\n",
+    "        try:\n",
+    "            opcion = int(input(\"Elija una opción: \"))\n",
+    "        except ValueError:\n",
+    "            print(\"⚠️ Opción inválida. Ingrese un número entre 1 y 4.\")\n",
+    "            continue\n",
+    "\n",
+    "        if opcion == 1:\n",
+    "            valor = input(\"Ingrese un valor: \")\n",
+    "            pila.append(valor)\n",
+    "            print(f\"Elemento '{valor}' agregado.\")\n",
+    "\n",
+    "        elif opcion == 2:\n",
+    "            if pila:\n",
+    "                eliminado = pila.pop()\n",
+    "                print(f\"Elemento '{eliminado}' quitado.\")\n",
+    "            else:\n",
+    "                print(\"⚠️ La pila está vacía.\")\n",
+    "\n",
+    "        elif opcion == 3:\n",
+    "            print(\"Pila actual:\", pila)\n",
+    "\n",
+    "        elif opcion == 4:\n",
+    "            print(\"Programa cerrado.\")\n",
+    "\n",
+    "        else:\n",
+    "            print(\"⚠️ Opción no reconocida.\")\n",
+    "\n",
+    "    return pila\n",
+    "\n",
+    "\n",
+    "# Ejecución directa\n",
+    "if __name__ == \"__main__\":\n",
+    "    simular_pila()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec5d2d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
